Launchpad automatic translations update.

--- a/po/es.po
+++ b/po/es.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-02 05:50-0400\n"
-"PO-Revision-Date: 2015-07-01 13:01+0000\n"
-"Last-Translator: Alfonso <admin@alfonsomh.eu>\n"
+"PO-Revision-Date: 2015-07-03 19:05+0000\n"
+"Last-Translator: Eugenio González <Unknown>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-07-02 05:40+0000\n"
-"X-Generator: Launchpad (build 17590)\n"
+"X-Launchpad-Export-Date: 2015-07-04 05:38+0000\n"
+"X-Generator: Launchpad (build 17597)\n"
 "Language: es\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -160,6 +160,11 @@ msgid ""
 "See http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-"
 "latest.html#exec-variables for a list of supported arguments."
 msgstr ""
+"Programa para ejecutar con argumentos. Se requiere esta clave si "
+"DBusActivatable no está establecido a \"Verdadero\" o si necesita "
+"compatibilidad con implementaciones que no entienden la activación D-Bus.\n"
+"Ir a http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-"
+"latest.html#exec-variables para ver la lista de argumentos soportados."
 
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "Command"
@@ -349,7 +354,7 @@ msgid ""
 "for more information."
 msgstr ""
 "Establece esta clave a \"True\" si la activación D-Bus está soportada para "
-"esta aplicación y quieres usarla.\n"
+"esta aplicación y quiere usarla.\n"
 "Ver http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html "
 "para más información."
 
