--- a/po/ru.po
+++ b/po/ru.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-07-12 12:16-0400\n"
-"PO-Revision-Date: 2014-04-23 19:57+0000\n"
-"Last-Translator: Rodion R. <rodikr2005@yandex.ru>\n"
+"PO-Revision-Date: 2015-07-23 22:39+0000\n"
+"Last-Translator: ned <Unknown>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-07-13 05:30+0000\n"
-"X-Generator: Launchpad (build 17620)\n"
+"X-Launchpad-Export-Date: 2015-07-24 05:43+0000\n"
+"X-Generator: Launchpad (build 17628)\n"
 "Language: ru\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -553,7 +553,7 @@ msgstr "Разное"
 
 #: ../menulibre/MenulibreApplication.py:359
 msgid "MenuLibre cannot be run as root."
-msgstr ""
+msgstr "Не удалось запустить MenuLibre с правами root"
 
 #: ../menulibre/MenulibreApplication.py:360
 msgid ""
@@ -561,6 +561,8 @@ msgid ""
 "href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
 "documentation</a> for more information."
 msgstr ""
+"Подробности в <a "
+"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>онлайн-справке</a>"
 
 #: ../menulibre/MenulibreApplication.py:404
 msgid "Add _Launcher..."
