--- a/po/uk.po
+++ b/po/uk.po
@@ -1,46 +1,45 @@
-# English (Australia) translation for menulibre
-# Copyright (c) 2013 Rosetta Contributors and Canonical Ltd 2013
+# Ukrainian translation for menulibre
+# Copyright (c) 2015 Rosetta Contributors and Canonical Ltd 2015
 # This file is distributed under the same license as the menulibre package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2013.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2015.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-07-12 12:16-0400\n"
-"PO-Revision-Date: 2014-01-25 03:35+0000\n"
-"Last-Translator: Jackson Doak <noskcaj@ubuntu.com>\n"
-"Language-Team: English (Australia) <en_AU@li.org>\n"
+"PO-Revision-Date: 2015-01-17 08:35+0000\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: Ukrainian <uk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-07-13 05:31+0000\n"
+"X-Launchpad-Export-Date: 2015-07-13 05:30+0000\n"
 "X-Generator: Launchpad (build 17620)\n"
-"Language: \n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
-msgstr "Menu Editor"
+msgstr "Редактор меню"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Add or remove applications from the menu"
-msgstr ""
+msgstr "Додавання або вилучення програм з меню"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Add _Launcher"
-msgstr ""
+msgstr "Додати _Launcher"
 
 #: ../data/ui/MenulibreWindow.ui.h:2
 msgid "Add _Directory"
-msgstr ""
+msgstr "Додати _Directory"
 
 #: ../data/ui/MenulibreWindow.ui.h:3
 msgid "Add _Separator"
-msgstr ""
+msgstr "Додати _Separator"
 
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Icon Selection"
-msgstr ""
+msgstr "Вибір піктограми"
 
 #: ../data/ui/MenulibreWindow.ui.h:5 ../menulibre/MenulibreApplication.py:1055
 #: ../menulibre/MenulibreApplication.py:1179
@@ -49,43 +48,43 @@ msgstr ""
 #: ../menulibre/MenulibreApplication.py:2695
 #: ../menulibre/MenulibreApplication.py:2801
 msgid "Cancel"
-msgstr ""
+msgstr "Скасувати"
 
 #: ../data/ui/MenulibreWindow.ui.h:6
 msgid "Apply"
-msgstr ""
+msgstr "Застосувати"
 
 #: ../data/ui/MenulibreWindow.ui.h:7
 msgid "Icon Name"
-msgstr "Icon Name"
+msgstr "Назва піктограми"
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Image File"
-msgstr "Image File"
+msgstr "Файл зображення"
 
 #: ../data/ui/MenulibreWindow.ui.h:9
 msgid "<b>Select an image</b>"
-msgstr ""
+msgstr "<b>Вибір зображення</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:10
 msgid "16px"
-msgstr ""
+msgstr "16px"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "32px"
-msgstr ""
+msgstr "Copy text \t 32px"
 
 #: ../data/ui/MenulibreWindow.ui.h:12
 msgid "64px"
-msgstr ""
+msgstr "Copy text \t 64px"
 
 #: ../data/ui/MenulibreWindow.ui.h:13
 msgid "128px"
-msgstr ""
+msgstr "128px"
 
 #: ../data/ui/MenulibreWindow.ui.h:14
 msgid "<b>Preview</b>"
-msgstr "<b>Preview</b>"
+msgstr "<b>Попередній перегляд</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:15 ../menulibre/MenulibreApplication.py:381
 #: ../menulibre/MenulibreApplication.py:2824
@@ -94,15 +93,15 @@ msgstr "MenuLibre"
 
 #: ../data/ui/MenulibreWindow.ui.h:16
 msgid "_File"
-msgstr "_File"
+msgstr "Файл(_F)"
 
 #: ../data/ui/MenulibreWindow.ui.h:17
 msgid "_Edit"
-msgstr "_Edit"
+msgstr "Правка(_E)"
 
 #: ../data/ui/MenulibreWindow.ui.h:18
 msgid "_Help"
-msgstr "_Help"
+msgstr "Довідка(_H)"
 
 #: ../data/ui/MenulibreWindow.ui.h:19
 msgid "Save Launcher"
@@ -110,39 +109,39 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:20 ../menulibre/MenulibreApplication.py:433
 msgid "Undo"
-msgstr "Undo"
+msgstr "Відкат"
 
 #: ../data/ui/MenulibreWindow.ui.h:21 ../menulibre/MenulibreApplication.py:440
 msgid "Redo"
-msgstr "Redo"
+msgstr "Повторити"
 
 #: ../data/ui/MenulibreWindow.ui.h:22 ../menulibre/MenulibreApplication.py:447
 msgid "Revert"
-msgstr "Revert"
+msgstr "Повернути"
 
 #: ../data/ui/MenulibreWindow.ui.h:23 ../menulibre/MenulibreApplication.py:454
 msgid "Delete"
-msgstr ""
+msgstr "Видалити"
 
 #: ../data/ui/MenulibreWindow.ui.h:24
 msgid "Search terms…"
-msgstr ""
+msgstr "Пошук за термінами…"
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Move Up"
-msgstr "Move Up"
+msgstr "Перемістити вгору"
 
 #: ../data/ui/MenulibreWindow.ui.h:26
 msgid "Move Down"
-msgstr "Move Down"
+msgstr "Перемістити вниз"
 
 #: ../data/ui/MenulibreWindow.ui.h:27
 msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Application Name</b></big>"
+msgstr "<big><b>Назва програми</b></big>"
 
 #: ../data/ui/MenulibreWindow.ui.h:28
 msgid "Application Name"
-msgstr ""
+msgstr "Назва програми"
 
 #: ../data/ui/MenulibreWindow.ui.h:29
 msgid "Application Comment"
@@ -150,7 +149,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/MenulibreApplication.py:861
 msgid "Description"
-msgstr ""
+msgstr "Описання"
 
 #: ../data/ui/MenulibreWindow.ui.h:31
 msgid ""
@@ -163,7 +162,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "Command"
-msgstr "Command"
+msgstr "Команда"
 
 #: ../data/ui/MenulibreWindow.ui.h:34
 msgid "The working directory."
@@ -171,11 +170,11 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:35
 msgid "Working Directory"
-msgstr "Working Directory"
+msgstr "Робочий каталог"
 
 #: ../data/ui/MenulibreWindow.ui.h:36
 msgid "Browse…"
-msgstr ""
+msgstr "Огляд…"
 
 #: ../data/ui/MenulibreWindow.ui.h:37
 msgid "<b>Application Details</b>"
@@ -187,7 +186,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:39
 msgid "Run in terminal"
-msgstr "Run in terminal"
+msgstr "Запустити в терміналі"
 
 #: ../data/ui/MenulibreWindow.ui.h:40
 msgid ""
@@ -197,7 +196,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:41
 msgid "Use startup notification"
-msgstr "Use startup notification"
+msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:42
 msgid ""
@@ -207,11 +206,11 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Hide from menus"
-msgstr "Hide from menus"
+msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:44
 msgid "<b>Options</b>"
-msgstr "<b>Options</b>"
+msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:45
 msgid "Add"
@@ -227,15 +226,15 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:48
 msgid "Categories"
-msgstr "Categories"
+msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:49
 msgid "Show"
-msgstr "Show"
+msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:50
 msgid "Name"
-msgstr "Name"
+msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:51
 msgid "Action Name"
@@ -376,47 +375,47 @@ msgstr ""
 #. Standard Items
 #: ../menulibre/MenulibreApplication.py:61
 msgid "Multimedia"
-msgstr "Multimedia"
+msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:62
 msgid "Development"
-msgstr "Development"
+msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:63
 msgid "Education"
-msgstr "Education"
+msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:64
 msgid "Games"
-msgstr "Games"
+msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:65
 msgid "Graphics"
-msgstr "Graphics"
+msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:66
 msgid "Internet"
-msgstr "Internet"
+msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:67
 msgid "Office"
-msgstr "Office"
+msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:68
 msgid "Settings"
-msgstr "Settings"
+msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:69
 msgid "System"
-msgstr "System"
+msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:70
 msgid "Accessories"
-msgstr "Accessories"
+msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:71
 msgid "WINE"
-msgstr "WINE"
+msgstr ""
 
 #. Desktop Environment
 #: ../menulibre/MenulibreApplication.py:73
@@ -479,7 +478,7 @@ msgstr ""
 #: ../menulibre/MenulibreApplication.py:138
 #: ../menulibre/MenulibreApplication.py:183
 msgid "Other"
-msgstr "Other"
+msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:359
 msgid "MenuLibre cannot be run as root."
@@ -524,7 +523,7 @@ msgstr ""
 #: ../menulibre/MenulibreApplication.py:1056
 #: ../menulibre/MenulibreApplication.py:1500
 msgid "Save"
-msgstr "Save"
+msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:432
 msgid "_Undo"
@@ -553,7 +552,7 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:467
 msgid "_Contents"
-msgstr "_Contents"
+msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:468
 #: ../menulibre/MenulibreApplication.py:2774
@@ -572,7 +571,7 @@ msgstr ""
 #. Create a new column.
 #: ../menulibre/MenulibreApplication.py:593
 msgid "Search Results"
-msgstr "Search Results"
+msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:835
 msgid "ThisEntry"
@@ -592,7 +591,7 @@ msgstr ""
 
 #: ../menulibre/MenulibreApplication.py:995
 msgid "New Shortcut"
-msgstr "New Shortcut"
+msgstr ""
 
 #. Unsaved changes
 #: ../menulibre/MenulibreApplication.py:1045
@@ -726,8 +725,8 @@ msgstr ""
 
 #: ../menulibre/MenulibreXdg.py:53
 msgid "New Menu Item"
-msgstr "New Menu Item"
+msgstr ""
 
 #: ../menulibre/MenulibreXdg.py:55
 msgid "A small descriptive blurb about this application."
-msgstr "A small descriptive blurb about this application."
+msgstr ""
