--- a/po/ru.po
+++ b/po/ru.po
@@ -8,15 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2015-07-12 12:16-0400\n"
-"PO-Revision-Date: 2015-07-23 22:39+0000\n"
-"Last-Translator: ned <Unknown>\n"
+"POT-Creation-Date: 2015-08-04 21:21-0400\n"
+"PO-Revision-Date: 2014-04-23 19:57+0000\n"
+"Last-Translator: Rodion R. <rodikr2005@yandex.ru>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-07-24 05:43+0000\n"
-"X-Generator: Launchpad (build 17628)\n"
+"X-Launchpad-Export-Date: 2015-08-05 05:37+0000\n"
+"X-Generator: Launchpad (build 17656)\n"
 "Language: ru\n"
 
 #: ../menulibre.desktop.in.h:1
