--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-07-12 12:16-0400\n"
-"PO-Revision-Date: 2015-07-23 06:58+0000\n"
-"Last-Translator: 玉堂白鹤 <yjwork@qq.com>\n"
+"POT-Creation-Date: 2015-08-04 21:21-0400\n"
+"PO-Revision-Date: 2012-08-15 05:49+0000\n"
+"Last-Translator: Wang Dianjin <Unknown>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-07-24 05:43+0000\n"
-"X-Generator: Launchpad (build 17628)\n"
+"X-Launchpad-Export-Date: 2015-08-05 05:37+0000\n"
+"X-Generator: Launchpad (build 17656)\n"
 "Language: \n"
 
 #: ../menulibre.desktop.in.h:1
