--- a/po/fr.po
+++ b/po/fr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-04 21:21-0400\n"
-"PO-Revision-Date: 2015-01-01 19:26+0000\n"
-"Last-Translator: jc1 <jc1.quebecos@gmail.com>\n"
+"PO-Revision-Date: 2014-10-04 12:48+0000\n"
+"Last-Translator: Yannick Le Guen <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-08-05 05:37+0000\n"
+"X-Launchpad-Export-Date: 2015-08-05 05:45+0000\n"
 "X-Generator: Launchpad (build 17656)\n"
 "Language: frnech\n"
 "X-Poedit-SourceCharset: UTF-8\n"
