--- a/po/ru.po
+++ b/po/ru.po
@@ -9,13 +9,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-08-04 21:21-0400\n"
-"PO-Revision-Date: 2014-04-23 19:57+0000\n"
-"Last-Translator: Rodion R. <rodikr2005@yandex.ru>\n"
+"PO-Revision-Date: 2015-07-23 22:39+0000\n"
+"Last-Translator: ned <Unknown>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-08-05 05:37+0000\n"
+"X-Launchpad-Export-Date: 2015-08-05 05:45+0000\n"
 "X-Generator: Launchpad (build 17656)\n"
 "Language: ru\n"
 
