--- a/po/uk.po
+++ b/po/uk.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-08-04 21:21-0400\n"
-"PO-Revision-Date: 2015-01-17 08:35+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2015-01-17 08:44+0000\n"
+"Last-Translator: Viacheslav Khomenko <slava.khomenko@gmail.com>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-08-05 05:37+0000\n"
+"X-Launchpad-Export-Date: 2015-08-05 05:45+0000\n"
 "X-Generator: Launchpad (build 17656)\n"
 
 #: ../menulibre.desktop.in.h:1
