--- a/po/nl.po
+++ b/po/nl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-08-04 21:21-0400\n"
-"PO-Revision-Date: 2015-01-05 18:30+0000\n"
-"Last-Translator: Wybo Dekker <wybo@dekkerdocumenten.nl>\n"
+"PO-Revision-Date: 2014-03-03 18:24+0000\n"
+"Last-Translator: Pjotr12345 <Unknown>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-08-05 05:45+0000\n"
+"X-Launchpad-Export-Date: 2015-08-06 05:41+0000\n"
 "X-Generator: Launchpad (build 17656)\n"
 
 #: ../menulibre.desktop.in.h:1
