--- a/po/fi.po
+++ b/po/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-04 21:21-0400\n"
-"PO-Revision-Date: 2014-08-21 10:46+0000\n"
+"PO-Revision-Date: 2015-08-06 22:24+0000\n"
 "Last-Translator: Pasi Lallinaho <pasi@shimmerproject.org>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-08-06 05:41+0000\n"
+"X-Launchpad-Export-Date: 2015-08-07 06:12+0000\n"
 "X-Generator: Launchpad (build 17656)\n"
 "Language: fi\n"
 
@@ -516,7 +516,7 @@ msgstr "Muut"
 
 #: ../menulibre/MenulibreApplication.py:359
 msgid "MenuLibre cannot be run as root."
-msgstr ""
+msgstr "MenuLibreä ei voida ajaa pääkäyttäjän oikeuksin."
 
 #: ../menulibre/MenulibreApplication.py:360
 msgid ""
@@ -524,6 +524,9 @@ msgid ""
 "href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
 "documentation</a> for more information."
 msgstr ""
+"Saadaksesi lisätietoja lue <a "
+"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online-"
+"dokumentaatiota</a>."
 
 #: ../menulibre/MenulibreApplication.py:404
 msgid "Add _Launcher..."
