--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 MenuLibre                                                                  NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-UNRELEASED, MenuLibre 2.0.7
+08 Aug 2015, MenuLibre 2.0.7
 
 - General:
   . Disable running as root. This keeps file permissions in check.
