--- a/po/lt.po
+++ b/po/lt.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-08-08 11:31-0400\n"
-"PO-Revision-Date: 2015-03-20 19:33+0000\n"
+"PO-Revision-Date: 2015-08-12 09:11+0000\n"
 "Last-Translator: Moo <hazap@hotmail.com>\n"
 "Language-Team: Lithuanian <lt@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-08-09 06:08+0000\n"
-"X-Generator: Launchpad (build 17656)\n"
+"X-Launchpad-Export-Date: 2015-08-13 05:43+0000\n"
+"X-Generator: Launchpad (build 17686)\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -515,7 +515,7 @@ msgstr "Kita"
 
 #: ../menulibre/MenulibreApplication.py:367
 msgid "MenuLibre cannot be run as root."
-msgstr ""
+msgstr "MenuLibre negali būti vykdoma kaip root."
 
 #: ../menulibre/MenulibreApplication.py:368
 msgid ""
@@ -523,6 +523,9 @@ msgid ""
 "href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
 "documentation</a> for more information."
 msgstr ""
+"Išsamesnei informacijai, prašome žiūrėti <a "
+"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>dokumentaciją "
+"internete</a>."
 
 #: ../menulibre/MenulibreApplication.py:412
 msgid "Add _Launcher..."
